--- a/login.html
+++ b/login.html
@@ -163,7 +163,7 @@
 
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">
-            © 2018 Copyright:
+            ï¿½ 2018 Copyright:
             <a href="http://website1120180218060025.azurewebsites.net/"> T.R.A.I.S.</a>
         </div>
         <!-- Copyright -->
