--- a/index.html
+++ b/index.html
@@ -44,25 +44,21 @@
 
     <style>
       button {
-        background-color: rgb(209, 207, 207);
-        /* Green */
-        /* border: none; */
-        color: rgb(5, 5, 5);
-        padding: 0px 8px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 22px;
+        background-color: #007bff;
+        color: #fff;
+        border: none;
+        padding: 10px 20px;
+        font-size: 16px;
         border-radius: 5px;
+        transition: background-color 0.3s ease;
       }
 
       button:hover {
-        box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.24),
-          0 7px 20px 0 rgba(0, 0, 0, 0.19);
+        background-color: #0056b3;
       }
 
       button:active {
-        color: rgb(245, 239, 239);
+        background-color: #004494;
       }
 
       #playpausebtn {
@@ -72,24 +68,23 @@
 
       form label,
       form button {
-        background-color: #7f9ccb;
-        padding: 5px 10px;
+        background-color: #007bff;
+        color: #fff;
+        padding: 10px 20px;
         border-radius: 5px;
-        border: 1px ridge black;
-        font-size: 0.8rem;
-        height: auto;
+        border: none;
+        font-size: 16px;
+        transition: background-color 0.3s ease;
       }
 
       form label:hover,
       form button:hover {
-        background-color: #2d5ba3;
-        color: white;
+        background-color: #0056b3;
       }
 
       form label:active,
       form button:active {
-        background-color: #0d3f8f;
-        color: white;
+        background-color: #004494;
       }
     </style>
   </head>
@@ -97,17 +92,9 @@
   <body>
     <div class="container-fluid">
       <!-- Navigation -->
-      <nav
-        class="navbar navbar-expand-lg static-top"
-        style="margin-left: 5px"
-      >
-        <a class="navbar-brand" href="index.html" style="padding: 2px">
-          <img
-            class="responsive"
-            src="images/code.png"
-            alt=""
-            style="width: 15%"
-          />
+      <nav class="navbar navbar-expand-lg static-top">
+        <a class="navbar-brand" href="index.html">
+          <img class="responsive" src="images/code.png" alt="" />
         </a>
         <button
           class="navbar-toggler"
@@ -135,8 +122,7 @@
         <div class="row">
           <div class="col-2" style="z-index: 2; padding: 5px; height: 82vh">
             <div style="float: none">
-            </br>
-              <div id="media-play-list" style="color: rgb(8, 8, 8)">
+              <div id="media-play-list">
                 <h4>Upload video</h4>
                 <input
                   type="file"
@@ -160,7 +146,6 @@
                   <div
                     class="playr_video_container"
                     id="playr_video_container_0"
-                    style="border: 1px #ffffff; overflow: hidden"
                   >
                     <video
                       class="playr_video"
@@ -196,7 +181,7 @@
                       id="chooseFrame"
                       name="chooseFrame"
                       min="1"
-                      style="width: 50%; height: 100%"
+                      class="chooseFrame"
                     />
                     <button
                       class="choosebtn"
@@ -208,7 +193,7 @@
                     </button>
                   </div>
                 </div>
-                <div id="change">
+                <div id="change" class="control-buttons">
                   <button
                     class="revSpeed"
                     id="revSpeed"
@@ -247,12 +232,10 @@
                 </div>
               </div>
             </div>
-            <!-- <div id="container"></div> -->
           </div>
 
           <div class="col-2" style="padding: 5px; height: 82vh">
             <div style="float: none">
-              <!-- <canvas style="border: 1px solid black; width: 100%;"></canvas> -->
               <div id="stage" style="background-color: white"></div>
               <div id="controls"></div>
             </div>
