Make the website responsive
Make the website fully responsive by updating HTML and CSS files.

* **index.html**
  - Add `container-fluid` class to the main container.
  - Update the video player and controls to be responsive using Bootstrap classes.
  - Adjust the navigation bar to be responsive using Bootstrap classes.

* **index2.html**
  - Add `container-fluid` class to the main container.
  - Update the video player and controls to be responsive using Bootstrap classes.

* **style.css**
  - Add media queries to adjust the layout and elements for different screen sizes.
  - Update the video player and controls styles to be responsive.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/hiyabh/Video_Player?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <div class="container-fluid">
       <!-- Navigation -->
       <nav
-        class="navbar navbar-expand-lg static-top"
+        class="navbar navbar-expand-lg navbar-dark bg-dark static-top"
         style="margin-left: 5px"
       >
         <a class="navbar-brand" href="index.html" style="padding: 2px">
@@ -177,12 +177,12 @@
                   id="playr_captions_wrapper_0 my_video"
                 >
                   <div
-                    class="playr_video_container"
+                    class="playr_video_container embed-responsive embed-responsive-16by9"
                     id="playr_video_container_0"
                     style="border: 1px #ffffff; overflow: hidden"
                   >
                     <video
-                      class="playr_video"
+                      class="playr_video embed-responsive-item"
                       id="playr_video_0"
                       oncanplay="isLoaded()"
                       ontimeupdate="myFunction(this)"
