Add modern frame to video player
Add a modern frame to the video player in `index.html` and `index2.html`.

* **style.css**
  - Add a new CSS class `.video-frame` to create a modern frame for the video player.
  - Set the border, padding, and box-shadow properties for the `.video-frame` class.

* **index.html**
  - Add the `video-frame` class to the `div` with class `playr_video_container`.

* **index2.html**
  - Add the `video-frame` class to the `div` with class `playr_video_container`.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/hiyabh/Video_Player?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                   id="playr_captions_wrapper_0 my_video"
                 >
                   <div
-                    class="playr_video_container"
+                    class="playr_video_container video-frame"
                     id="playr_video_container_0"
                     style="border: 1px #ffffff; overflow: hidden"
                   >
