--- a/index2.html
+++ b/index2.html
@@ -107,7 +107,7 @@
                     <div style="width:100%; margin:0">
                         <div class="playr_wrapper" id="playr_wrapper_0" tabindex="0">
                             <div class="playr_captions_wrapper" id="playr_captions_wrapper_0 my_video">
-                                <div class="playr_video_container" id="playr_video_container_0"
+                                <div class="playr_video_container video-frame" id="playr_video_container_0"
                                     style="border:1px #ffffff; overflow:hidden">
                                     <!-- <video class="playr_video" id="video">
                                         <source src="video/videoplayback.mp4" type="video/mp4">
